--- a/css/4.1.1.css
+++ b/css/4.1.1.css
@@ -1,6 +1,6 @@
 html, body {
-	font-family: 'Arial';
-	color: dodgerblue;
+	font-family: Helvetica, Arial, sans-serif;
+	color: black;
 	text-align: left;
 	line-height: 1.3em;
 }
@@ -21,6 +21,32 @@ h2, h3 {
 	font-family: monospace;
 	font-size: 5em;
 	border: 0.5px green dotted
+}
+
+input {
+	height: 2em;
+	padding: 0 0.5em;
+	width: 100%;
+	border: 0px;
+	align-content: center;
+	text-align: center;
+}
+
+input[type=submit] {
+	margin-top: 2em;
+	width: 7em;
+	border-bottom: solid 3px #f1f1f1;
+	background-color: transparent;
+}
+
+input[type=submit]:hover {
+	border-bottom: solid 3px #555;
+	background-color: #f1f1f1;
+}
+
+input:focus {
+	outline: none;
+	border: 0px;
 }
 
 .msg {
@@ -71,7 +97,8 @@ h2, h3 {
 	float: none;
 	text-align: justify;
 	width: 100%;
-	margin-bottom: 15px
+	margin-bottom: -150px;
+	position: relative;
 }
 
 form {
@@ -85,10 +112,45 @@ form {
 }
 
 .page {
-	border-left: 1.5px dotted dodgerblue;
 	width: 75%;
 	float: right;
 	padding: 10px;
+}
+
+table {
+	width: 60%;
+	margin: auto;
+	border-collapse: collapse;
+	table-layout: auto;
+}
+
+td, th {
+	border-bottom: solid 3px #f1f1f1;
+	border-collapse: collapse;
+	border-spacing: 0;
+	border
+}
+
+tr {
+	height: 3em;
+	vertical-align: bottom;
+}
+
+.fieldname {
+	text-align: left;
+	width: auto;
+}
+
+.fieldinput {
+	text-align: left;
+}
+
+label {
+	align-content: left;
+}
+
+td:hover {
+	border-bottom: solid 3px #555;
 }
 
 .subtitle {
@@ -96,39 +158,65 @@ form {
 	font-size: 10;
 }
 
-hr {
-	border-top: 1px solid dodgerblue
-}
-
 footer {
 	clear: both;
 	margin-top: 15px;
-	border-color: dodgerblue;
-	border-top: 1px solid dodgerblue;
+	border-top: 3px solid #555;
+	position: absolute;
+	bottom: 0;
+	width: 99%;
+	height: 100px
 }
 
 .footer {
 	width: 100%;
+	color: #555;
 }
 
-li {
+ul {
+	list-style-type: none;
+	width: 200px;
+	margin: 0;
+	padding: 0;
+}
+
+li a {
+	display: block;
 	list-style: none;
+	border-left: solid #f1f1f1 5px;
+	padding: 10px;
+}
+
+li a:hover {
+	display: block;
+	background-color: #f1f1f1;
+	border-left: solid 5px #555;
 }
 
 .footer-top {
-	padding:10px
+	padding:10px;
 }
 
 .left-footer {
 	padding-top: 10px;
 	text-align: left;
 	width: 50%;
+	border: 0px;
+}
+
+.left-footer:hover {
+	border-bottom: 0px;
+}
+
+.right-footer:hover {
+	border-bottom: 0px;
 }
 
 .right-footer {
 	padding-top: 10px;
 	text-align: right;
 	width: 50%;
+	border: 0px;
 }
 
 a, a:visited, a:hover {
