--- a/css/4.1.1.css
+++ b/css/4.1.1.css
@@ -115,10 +115,15 @@ input:focus {
 	clear: both;
 }
 
+.form-table {
+	width: 600px;
+}
+
 .main-content {
 	float: none;
 	text-align: justify;
 	width: auto;
+	margin-top: 120px;
 	margin-bottom: -150px;
 	position: relative;
 }
@@ -145,17 +150,17 @@ form {
 	padding: 10px;
 	position: fixed;
 	left: 0;
-	top: 100px;
+	top: 150px;
 }
 
 .page {
-	width: 500px;
+	width: auto;
 	padding: 10px;
 	margin: auto;
 }
 
 table {
-	width: 400px;
+	width: auto;
 	margin: auto;
 	border-collapse: collapse;
 	table-layout: auto;
@@ -171,6 +176,22 @@ td, th {
 tr {
 	height: 3em;
 	vertical-align: bottom;
+}
+
+.blank, .blank:hover {
+	border: 0;
+	width: auto;
+	margin: 100px 100px 20px 100px;
+	padding: 20px 100px;
+	vertical-align: bottom;
+}
+
+.blank-bottom, .blank-bottom:hover {
+	border: 0;
+	width: auto;
+	margin: 20px 100px 100px 100px;
+	padding: 20px 100px;
+	vertical-align: top;
 }
 
 .fieldname {
@@ -202,7 +223,17 @@ td:hover {
 
 .subtitle {
 	text-align: center;
-	font-size: 10;
+	font-size: 12pt;
+}
+
+.underdotted {
+	text-decoration: underline;
+	text-decoration-style: dotted;
+}
+
+.underdotted:hover {
+	text-decoration: underline;
+	text-decoration-style: dotted;
 }
 
 footer {
@@ -213,6 +244,19 @@ footer {
 	bottom: 0;
 	width: 99%;
 	height: 100px
+}
+
+header {
+	border-bottom: 3px solid #555;
+	position: absolute;
+	top: 0;
+	width: 99%;
+	margin-bottom: 50px;
+	height: 100px
+}
+
+.header, .header:hover {
+	border: 0;
 }
 
 .footer {
@@ -245,7 +289,7 @@ li a:hover {
 }
 
 .subtitle {
-	font-size: 10px;
+	font-size: 10pt;
 	color: #555;
 	text-align: left;
 }
