improves for security and reliability

--- a/css/4.1.1.css
+++ b/css/4.1.1.css
@@ -226,6 +226,10 @@ tr {
 	border-bottom: solid 3px #555;
 }
 
+.form-table tr:focus {
+	border-bottom: solid 3px #555;
+}
+
 .blank, .blank:hover {
 	border: 0;
 	width: 400px;
