--- a/css/4.1.1.css
+++ b/css/4.1.1.css
@@ -42,6 +42,18 @@ h2, h3 {
 	text-align: center;
 }
 
+.jsmsg {
+	width: 98%;
+	border: #FFA000 solid 1px;
+	padding: 0.5em;
+	position: absolute;
+	top: 110px;
+	background-color: #FFF8E1;
+	color: #FFA000;
+	border-radius: 7px;
+	text-align: center;
+}
+
 .created {
 	text-align: center;
 	border: #4CAF50 solid 1px;
